Исправлены методы менеджеров истории и задач, исправлены тесты, добавлен приватный конструктор утилитарному классу.