@@ -1,28 +1,30 @@
 package TaskManager;
 
 import Tasks.Task;
-
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 
 public class InMemoryHistoryManager implements HistoryManager {
-	private List<Task> history = new ArrayList<>();
+	private List<Task> history = new LinkedList<>();
+	private static final int HISTORY_MAX_SIZE = 10;
+	private List<Task> historyCopy;
 
 	@Override
 	public void add(Task task) {
-		if (history.size() < 10) {
+		if (history.size() < HISTORY_MAX_SIZE) {
 			history.add(task);
 
 		} else {
-			history.removeFirst();
+			history.remove(0);
 			history.add(task);
 
 		}
 	}
 	@Override
 	public List<Task> getHistory() {
-		return history;
+		historyCopy = history;
+		return historyCopy;
 
 	}
 }
