@@ -7,7 +7,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class InMemoryHistoryManagerTest {
 	HistoryManager historyManager = new InMemoryHistoryManager();
-	TaskManager manager = new InMemoryTaskManager();
 
 	@Test
 	public void tasksAddedToHistoryManagerKeepTheirOriginalData() {
@@ -15,10 +14,10 @@ class InMemoryHistoryManagerTest {
 		Task savedTask = task;
 		historyManager.add(task);
 		task = new Task("Имя1","Описание1", Status.DONE, 1);
-		assertEquals(savedTask.getName(), historyManager.getHistory().getFirst().getName());
-		assertEquals(savedTask.getDescription(), historyManager.getHistory().getFirst().getDescription());
-		assertEquals(savedTask.getStatus(), historyManager.getHistory().getFirst().getStatus());
-		assertEquals(savedTask.getId(), historyManager.getHistory().getFirst().getId());
+		assertEquals(savedTask.getName(), historyManager.getHistory().get(0).getName());
+		assertEquals(savedTask.getDescription(), historyManager.getHistory().get(0).getDescription());
+		assertEquals(savedTask.getStatus(), historyManager.getHistory().get(0).getStatus());
+		assertEquals(savedTask.getId(), historyManager.getHistory().get(0).getId());
 
 	}
 
